fix(build): update build command to include directory listings and use frozen lockfile

--- a/apps/web/railway.toml
+++ b/apps/web/railway.toml
@@ -1,5 +1,5 @@
 [build]
-buildCommand = "cd ../.. && pnpm install && pnpm turbo run build --filter=web"
+buildCommand = "pwd && ls -la && cd ../.. && pwd && ls -la && pnpm install --frozen-lockfile && pnpm turbo build --filter=web"
 
 [deploy]
 startCommand = "cd apps/web && pnpm start"
