feat(biome): add biome configuration file and update VSCode settings for improved linting and formatting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "explicit",
     "source.removeUnusedImports": "explicit",
-    "source.fixAll.biome": "explicit"
+    "source.fixAll.biome": "explicit",
+    "source.biome": "explicit",
+    "source.fixAll.ts": "explicit"
   }
 }
