--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
       "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "start": {
-      "dependsOn": ["^start"]
+      "dependsOn": ["^start"],
+      "inputs": [".env*"]
     },
     "lint": {
       "dependsOn": ["^lint"]
