chore(turbo): update inputs for start command to include default turbo environment variable

--- a/turbo.json
+++ b/turbo.json
@@ -9,7 +9,7 @@
     },
     "start": {
       "dependsOn": ["^start"],
-      "inputs": [".env*"]
+      "inputs": ["$TURBO_DEFAULT$", ".env*"]
     },
     "lint": {
       "dependsOn": ["^lint"]
