--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "format:api": "turbo run format --filter=api"
   },
   "devDependencies": {
-    "prettier": "^3.6.2",
-    "turbo": "^2.5.8",
-    "typescript": "5.9.2"
+    "turbo": "^2.5.8"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.0.0",
   "engines": {
-    "node": ">=20"
+    "node": ">=22"
   }
 }
